[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/ParasiteSpawner.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 344, 680 )

[node name="ParasiteSpawner" type="Area2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]

[node name="ParasiteList" type="Node2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_ParasiteSpawner_body_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
